# arktools

./: LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: global-styles.ts  main.tsx  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: ArkTools.icns
src-tauri/src/: main.rs  menu.rs
src-tauri/src/window/: mod.rs
src/component/: index.ts
