[package]
name = "ArkTools"
version = "0.0.1"
description = "A Tauri App"
authors = ["L3ve"]
license = "MIT"
repository = "https://github.com/l3ve/arktools"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = ["config-json5"] }

[dependencies]
tauri = { version = "1.3", features = ["config-json5", "macos-private-api", "shell-open", "system-tray"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
